--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 			<img id="cart" src="http://www.bimsinc.com/Library/news-boxes/stick_figure_shopping_cart_500_clr.gif" alt="Shopping Cart" width="75px">
 		</div>
 		<div class="main">
-			<input type="text" id="item" name="add-items" autocomplete="off" placeholder="Add Items Here">
-			<button type="submit" id="add">
-				<img src="http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/sign-add-icon.png" alt="add to list" width="20px">
-			</button>
+			<input type="text" id="item" name="add-items" autocomplete="off" placeholder="+Add Items Here">
 		</div>
 	</div>
 	
