List items added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<div class="main">
 			<input type="text" id="item" name="add-items" autocomplete="off" placeholder="+Add Items Here">
 		</div>
+		<!-- <div class="new-items">
+			<p>bananas</p> -->
+		</div>
 	</div>
 	
 </body>
