--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
 		<div class="main">
 			<input type="text" id="item" name="add-items" autocomplete="off" placeholder="+Add Items Here">
 		</div>
-		<!-- <div class="new-items">
-			<p>bananas</p> -->
+		<div class="new-items">
+			<button class="check">
+				<img src="http://vignette4.wikia.nocookie.net/okami/images/f/f0/Check_mark.png/revision/latest?cb=20130520141819" alt="check" width="15px">
+			</button>
+			<button class="remove">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Red_x.svg/2000px-Red_x.svg.png" width="15px">
+			</button>
+			<p>test</p>
 		</div>
+
 	</div>
 	
 </body>
