add/remove buttons added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		</div>
 		<div class="new-items">
 			<button class="check">
-				<img src="http://vignette4.wikia.nocookie.net/okami/images/f/f0/Check_mark.png/revision/latest?cb=20130520141819" alt="check" width="15px">
+				<img src="http://www.clker.com/cliparts/u/e/E/I/2/i/dark-green-check-mark-hi.png" alt="check" width="20px">
 			</button>
 			<button class="remove">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Red_x.svg/2000px-Red_x.svg.png" width="15px">
+				<img src="http://www.clker.com/cliparts/0/7/e/a/12074327311562940906milker_X_icon.svg.hi.png" width="20px">
 			</button>
 			<p>test</p>
 		</div>
