--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 			<button class="remove">
 				<img src="http://www.clker.com/cliparts/0/7/e/a/12074327311562940906milker_X_icon.svg.hi.png" width="20px">
 			</button>
-			<p>test</p>
+			<ul class="list">
+				<li>test</li>
+			</ul>
 		</div>
 
 	</div>
