--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 		<div class="header">
 			<h1>Cart</h1>
 			<h2>Grocery shopping made easy.</h2>
-			<img id="cart" src="http://www.bimsinc.com/Library/news-boxes/stick_figure_shopping_cart_500_clr.gif" alt="Shopping Cart" width="75px">
 		</div>
 		<div class="main">
-			<input type="text" id="item" name="add-items" autocomplete="off" placeholder="+Add Items Here">
+			<input type="text" class="item" name="add-items" autocomplete="off" placeholder="+Add Items Here">
 		</div>
-		<div class="new-items">
-			<button class="check">
-				<img src="http://www.clker.com/cliparts/u/e/E/I/2/i/dark-green-check-mark-hi.png" alt="check" width="20px">
-			</button>
-			<button class="remove">
-				<img src="http://www.clker.com/cliparts/0/7/e/a/12074327311562940906milker_X_icon.svg.hi.png" width="20px">
-			</button>
-			<ul class="list">
-				<li>test</li>
-			</ul>
+		<div class="list-container">
+			<span class="placehold" >You currently have no items.</span>
+			<!-- <ul class="list">
+				<li>
+					<span></span>
+					<button class="remove">
+						<img src="http://www.clker.com/cliparts/0/7/e/a/12074327311562940906milker_X_icon.svg.hi.png" width="20px">
+					</button>
+					<button class="check">
+						<img src="http://www.clker.com/cliparts/u/e/E/I/2/i/dark-green-check-mark-hi.png" alt="check" width="25px">
+					</button>
+				</li>
+			</ul> -->
 		</div>
 
 	</div>
