--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li>
 					<button class="fa fa-minus-square-o">
 					</button>
-					<span class="new-item">test</span>
+					<span class="new-item"></span>
 					<button class="fa fa-check-square-o">
 					</button>
 				</li>
