--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
 			<h2>Grocery shopping made easy.</h2>
 		</div>
 		<div class="main">
-			<input type="text" class="item" name="add-items" autocomplete="off" placeholder="+Add Items Here">
+			<form class="item">
+			<input type="text" name="add-items" autocomplete="off" placeholder="+Add Items Here">
+			<input type="submit" value="Submit">
+			</form>
 		</div>
 		<div class="list-container">
 			<span class="placehold" >You currently have no items.</span>
 			<ul class="list">
-				<li>
-					<button class="fa fa-minus-square-o">
-					</button>
-					<span class="new-item"></span>
-					<button class="fa fa-check-square-o">
-					</button>
-				</li>
 			</ul>
 		</div>
 
