--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="main">
 			<form class="item">
-			<input type="text" name="add-items" autocomplete="off" placeholder="+Add Items Here">
+			<input type="text" class="textfield" name="add-items" autocomplete="off" placeholder="+Add Items Here">
 			<input type="submit" value="Submit">
 			</form>
 		</div>
@@ -29,6 +29,6 @@
 		</div>
 
 	</div>
-	
+
 </body>
 </html>
