--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
-	<div class="container animated fadeInUpBig">
+	<div class="container animated swing">
 		<div class="header">
 			<h1>Cart</h1>
 			<h2>Grocery shopping made easy.</h2>
